--- a/páginas/cadastro.html
+++ b/páginas/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de usuário</title>
+    <title>Cadastrar Usuário</title>
     <style>
         *{
             font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -36,13 +36,14 @@
     </style>
 </head>
 <body>
+
     <div class="container">
         <form action="/cadastro" method="POST">
             <label for="name">Nome:</label><br>
             <input type="text" name="name"></br></br>
             <label for="datanasc">Data de Nascimento:</label></br>
             <input type="date" name="datanasc"></br></br>
-            <label for="username">Username:</label></br>
+            <label for="username">Apelido:</label></br>
             <input type="text" name="username"></br></br>
             <button class="btn" type="submit">Cadastrar</button>
         </form>
