--- a/páginas/login.html
+++ b/páginas/login.html
@@ -73,7 +73,7 @@
             <input placeholder="Nome de Usuário" type="text" name="username"></br></br>
           
             <input placeholder ="Senha" type="password" name="senha"></br></br>
-            <button class="botao" type="submit">Login</button>
+            <button class="botao" type="submit">Entrar</button>
         </form>
     </div>
     
